--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "~3.6.17",
     "connect-mongo": "~0.3.3",
     "component-builder": "~0.9.0",
-    "string-to-js": "0.0.1"
+    "string-to-js": "0.0.1",
+    "component-stylus-plugin": "~0.2.3"
   }
 }
