--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "bugs": {
     "url": "https://github.com/gravityonmars/nodejs-boilerplate/issues"
   },
-  "engines": {"node": "0.10.15"},
+  "engines": {
+    "node": "0.10.15",
+    "npm": "1.3.5"
+  },
   "dependencies": {
     "passport": "~0.1.17",
     "express": "~3.3.5",
