--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "component-builder": "~0.9.0",
     "string-to-js": "0.0.1",
     "component-stylus-plugin": "~0.2.3",
-    "commander": "~2.0.0"
+    "commander": "~2.0.0",
+    "component": "~0.17.0"
   }
 }
