--- a/package.json
+++ b/package.json
@@ -29,12 +29,17 @@
   },
   "dependencies": {
     "passport": "~0.2.0",
-    "express": "~3.3.5",
+    "express": "4.4.3",
+    "express-session": "v1.3.1",
+    "cookie-parser": "1.1.0",
+    "body-parser": "1.3.1",
+    "errorhandler": "1.0.2",
+    "serve-favicon": "2.0.1",
     "jade": "~0.34.1",
     "passport-facebook": "~1.0.2",
     "passport-twitter": "~1.0.2",
     "mongoose": "~3.6.17",
-    "connect-mongo": "~0.3.3",
+    "connect-mongo": "0.4.1",
     "string-to-js": "0.0.1",
     "component-stylus-plugin": "~0.2.3",
     "commander": "~2.0.0",
