--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "cookie-parser": "1.1.0",
     "body-parser": "1.3.1",
     "errorhandler": "1.0.2",
+    "compression": "1.0.7",
+    "nowww": "~1.1.2",
     "serve-favicon": "2.0.1",
     "jade": "~0.34.1",
     "passport-facebook": "~1.0.2",
@@ -45,6 +47,9 @@
     "commander": "~2.0.0",
     "component": "~0.19.5",
     "component-builder": "~0.10.1",
+    "merge-util": "0.1.0",
+    "node-path": "0.0.3",
+    "crypto": "0.0.3",
     "debug": "~0.7.4"
   }
 }
