--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "string-to-js": "0.0.1",
     "component-stylus-plugin": "~0.2.3",
     "commander": "~2.0.0",
-    "component": "~0.19.5",
+    "component": "1.0.0-rc5",
     "component-builder": "~0.10.1",
     "merge-util": "0.1.0",
     "node-path": "0.0.3",
