--- a/package.json
+++ b/package.json
@@ -37,18 +37,16 @@
     "compression": "1.0.7",
     "nowww": "~1.1.2",
     "serve-favicon": "2.0.1",
-    "jade": "~0.34.1",
+    "jade": "~0.35.0",
     "passport-facebook": "~1.0.2",
     "passport-twitter": "~1.0.2",
     "mongoose": "~3.6.17",
     "connect-mongo": "0.4.1",
     "string-to-js": "0.0.1",
-    "stylus": "0.46.3",
     "commander": "~2.0.0",
-    "component": "1.0.0-rc5",
-    "component-builder": "1.1.5",
-    "component-resolver": "1.1.6",
-    "builder-jade": "1.0.1",
+    "component-stylus-plugin": "~0.2.3",
+    "component": "~0.19.5",
+    "component-builder": "~0.10.1",
     "merge-util": "0.1.0",
     "node-path": "0.0.3",
     "crypto": "0.0.3",
