--- a/package.json
+++ b/package.json
@@ -52,6 +52,10 @@
     "merge-util": "0.1.0",
     "node-path": "0.0.3",
     "crypto": "0.0.3",
-    "debug": "2.0.0"
+    "debug": "2.0.0",
+    "co-prompt": "~1.0.0",
+    "passport-local": "~0.1.6",
+    "passport-local-mongoose": "~0.2.4",
+    "mongoose-gravatar": "~0.2.1"
   }
 }
