--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "t-component": "1.0.0",
     "csurf": "^1.6.5",
     "notifier-client": "0.2.0"
+  },
+  "scripts": {
+    "postinstall": "node ./bin/dos-install && node ./bin/dos-config && node ./bin/dos-build"
   }
 }
