[jwt] Added JSON Web Token sign in mechanism. Closes #27.

--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "debug": "2.0.0",
     "t-component": "1.0.0",
     "csurf": "^1.6.5",
-    "notifier-client": "0.2.0"
+    "notifier-client": "0.2.0",
+    "jwt-simple": "0.2.0",
+    "moment": "2.9.0"
   },
   "scripts": {
     "postinstall": "node ./bin/platform-install && node ./bin/platform-config && node ./bin/platform-build"
